<resources>
    <string name="app_name">Mrc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_ui">Splash_ui</string>
    <string name="title_activity_sign_in_ui">SignIn_ui</string>
    <string name="email_txt">Email Address</string>
    <string name="password_txt">Password</string>
    <string name="login_txt">Login</string>
    <string name="hello_txt">MRC</string>
    <string name="hello_desc_txt">INNOVATE MARKETING</string>
    <string name="title_activity_home_ui">Home_ui</string>
    <string name="records_txt">Manage Branding</string>
    <string name="survey_txt">Manage Survey</string>
    <string name="title_activity_manage__records_ui">Manage Records</string>
    <string name="title_activity_manage_records_ui">Manage Records</string>
    <string name="title_activity_reports_ui">Manage Reports</string>
    <string name="title_activity_add_records_ui">Add Records</string>
    <string name="zone_txt">Zone</string>
    <string name="region_txt">Region</string>
    <string name="district_txt">District</string>
    <string name="suburb_txt">Suburb</string>
    <string name="street_txt">Street</string>
    <string name="pos_txt">Pos Name</string>
    <string name="contact_txt">Contact Person</string>
    <string name="phone_txt">Phone Number</string>
    <string name="pos_code_txt">Pos Code</string>
    <string name="shop_type_txt">Shop Type</string>
    <string name="material_type_txt">Type of Materials Removed</string>
    <string name="material_installed_txt">Type of Materials Installed</string>
    <string name="categories_txt">POS Type</string>
    <string name="competitor_material_txt">Competitors Materials Installed</string>
    <string name="branding_txt">Is the POS Branded?</string>
    <string name="service_txt">Service Offered</string>
    <string name="competitor_txt">Competitor</string>
    <string name="before_txt">Before Installation</string>
    <string name="after_txt">After Installation</string>
    <string name="save_txt">Save</string>
    <string name="update_txt">Update</string>
    <string name="title_activity_settings_ui">Settings</string>
    <string name="Notification_txt">Notification</string>
    <string name="Notification_details_txt">Allow device to receive default notification</string>
    <string name="help_txt">Help</string>
    <string name="help_details_txt">Let us help you</string>
    <string name="about_txt">About us</string>
    <string name="version_txt">Version 1.3</string>
    <string name="about_details_txt">Get to know more about us</string>
    <string name="logout_txt">Log out</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="quantity_txt">Quantity</string>
    <string name="title_activity_camera_ui">Camera</string>
    <string name="image">image</string>
    <string name="take_picture">Please take an image</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="server_reachable_error">Could not reach server at this time please try again later</string>
    <string name="wrong_error">Something went wrong. Please try again</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="logout_help">Do you want to logout from MRC-Tool?</string>
    <string name="zone_error">Please select the Zone</string>
    <string name="region_error">Please select the Region</string>
    <string name="district_error">Please enter the District</string>
    <string name="suburb_error">Please enter the Suburb</string>
    <string name="street_error">Please enter the Street</string>
    <string name="pos_name_error">Please enter the Pos Name</string>
    <string name="contact_error">Please enter the Contact Person</string>
    <string name="phone_error">Please enter the Phone Number</string>
    <string name="pos_code_error">Please enter the Pos Code</string>
    <string name="pos_images">POS Image</string>
    <string name="shop_error">Please select the Shop Type</string>
    <string name="picture_error">Please take a picture</string>

    <string name="no_pos">No Pos Data</string>
    <string name="refresh">Please Scroll to Refresh</string>
    <string name="try_refresh">Please try to refresh the page</string>
    <string name="title_activity_update_ui">Update Data</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_basic_ui">Survey</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_survey_ui">Mrc POS Survey</string>
    <string name="title_activity_update_survey_ui">UpdateSurvey_ui</string>


</resources>
