<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.SignIn_ui"
    tools:showIn="@layout/activity_sign_in_ui">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img"/>

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        android:text="@string/hello_txt"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"/>

    <TextView android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:textSize="@dimen/_14ssp"
        android:text="@string/hello_desc_txt"
        android:textColor="@color/white"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_16sdp"/>


    <ImageView android:id="@+id/bg_img"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@id/description"
        android:layout_marginLeft="@dimen/_16sdp"
        tools:src="@drawable/login_img"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp">

        <EditText android:id="@+id/phone_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:textSize="@dimen/_12ssp"
            android:background="@color/text_bg"
            android:inputType="phone"
            android:hint="@string/phone_txt"
            android:textColorHint="@color/grey_900"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_16sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"/>


        <EditText android:id="@+id/pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:textSize="@dimen/_12ssp"
            android:background="@color/text_bg"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/password_txt"
            android:textColorHint="@color/grey_900"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_16sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"/>

        <ProgressBar android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <Button android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/login_btn"
            android:text="@string/login_txt"
            android:textAllCaps="true"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white" />




    </LinearLayout>




</RelativeLayout>