<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Settings_ui"
    tools:showIn="@layout/activity_settings_ui">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout android:id="@+id/notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/custom_selector"
            android:gravity="center_vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:clickable="false" />

            <TextView android:id="@+id/not_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Notification_txt"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/notification"
                android:layout_marginRight="4dp"
                android:text="@string/Notification_details_txt"
                android:layout_below="@id/not_title"/>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <RelativeLayout android:id="@+id/vibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/custom_selector"
            android:gravity="center_vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:clickable="false" />

            <TextView android:id="@+id/vibrate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Vibrate"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/vibrate"
                android:layout_marginRight="4dp"
                android:text="Allow vibration upon receive notification"
                android:layout_below="@id/vibrate_title"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_selector">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4sdp">

                <Button android:id="@+id/sync_data_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Sync Data"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/sync_btn"/>


            </LinearLayout>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>


        <RelativeLayout android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_selector">

            <TextView android:id="@+id/help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/help_txt"
                android:textSize="16sp"/>

            <TextView android:id="@+id/help_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/help_details_txt"
                android:layout_below="@id/help_title"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <RelativeLayout android:id="@+id/about_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_selector">

            <TextView android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/about_txt"
                android:textSize="16sp"/>

            <TextView android:id="@+id/about_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/about_details_txt"
                android:layout_below="@id/about_title"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_dark"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <RelativeLayout android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_selector">

            <TextView android:id="@+id/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/logout_txt"
                android:textSize="16sp"/>

            <TextView android:id="@+id/logout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                tools:text="Log out Seuri Kuoko"
                android:layout_below="@id/log_out"/>

        </RelativeLayout>



    </LinearLayout>

</ScrollView>